<resources>
    <string name="app_build_version">2.0.0-Unknown</string>
    <string name="app_name">SnapToolkit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shared_user_id">com.snapbizz</string>
    <string name="rupee_symbol">₹</string>
    <string name="db_password">Enter DB Password</string>
    <string name="wrong_password">Password is wrong try again</string>
    <string name="printer_errconn_state">Printer device can not access, please re-connect</string>
    <string name="keypad_0">0</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_dot">.</string>
    <string name="keypad_enter">Enter</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="discount1">-2%</string>
    <string name="discount2">-4%</string>
    <string name="discount3">-6%</string>
    <string name="done">Done</string>
    <string-array name="quickadd_array">
        <item name="quickadd_food_tag">quickaddfood</item>
        <item name="quickadd_kitchen_tag">quickaddkitchen</item>
        <item name="quickadd_homecare_tag">quickaddhomecare</item>
        <item name="quickadd_bathroom_tag">quickaddbathroom</item>
        <item name="quickadd_others_tag">quickaddothers</item>
    </string-array>
    <string-array name="xl_store_information">
        <item>Store Name</item>
        <item>Mobile Number</item>
        <item>Store Address</item>
        <item>TIN Number</item>
        <item>Email ID</item>
        <item>Period</item>
    </string-array>
    <string-array name="xl_table_headers">
        <item>Date</item>
        <item>Invoice</item>
        <item>Basic Value</item>
        <item>VAT %</item>
        <item>Input VAT</item>
        <item>Total</item>
    </string-array>
    <string name="quickadd_food_tag">quickaddfood</string>
    <string name="quickadd_kitchen_tag">quickaddkitchen</string>
    <string name="quickadd_homecare_tag">quickaddhomecare</string>
    <string name="quickadd_bathroom_tag">quickaddbathroom</string>
    <string name="quickadd_others_tag">quickaddothers</string>
    <string name="create_retailer_header">Create Retailer</string>
    <string name="sales_person_details">Sales Person Details</string>
    <string name="sales_person_phone_hint">Sales Phone Number</string>
    <string name="sales_person_phone">Sales Person Phone Number</string>
    <string name="confirm_message">Please confirm to update the price changes.</string>
    <string name="owner_details">Owner Details</string>
    <string name="owner_name_hint">Name</string>
    <string name="owner_name">"Owner's Name"</string>
    <string name="owner_phone_hint">Phone Number</string>
    <string name="owner_phone">Phone Number</string>
    <string name="email">"E-Mail"</string>
    <string name="email_hint">"E-Mail"</string>
    <string name="error_generate_otp">Unable to Generate OTP.</string>
    <string name="store_details">Store Details</string>
    <string name="store_name">Store Name</string>
    <string name="store_tin_number">TIN Number</string>
    <string name="store_address1">Address Line 1</string>
    <string name="store_address2">Address Line 2</string>
    <string name="address_hint">Address</string>
    <string name="store_city">City</string>
    <string name="store_state">State</string>
    <string name="store_zip">Zip Code</string>
    <string name="store_landline">Landline Number</string>
    <string name="submit">Terms and Conditions</string>
    <string name="passkey">sn@pb1zz@123</string>
    <string name="accept">Accept</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="estimate">ESTIMATE</string>
    <string name="no_network">No Network Connection</string>
    <string name="db_backup_error">Unable to backup db</string>
    <string name="add_existing_products">Add Existing Product</string>
    <string name="error_add_existing_products">Sorry! This product does not exist in Inventory</string>
</resources>