<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="end" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/create_retailer"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_rounded_bg"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/sales_person_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/sales_person_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sales_person_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sales_person_details"
                android:layout_marginTop="5dp"
                android:text="@string/sales_person_phone" />

            <EditText
                android:id="@+id/sales_person_phone_et"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignLeft="@+id/sales_person_phone"
                android:layout_below="@+id/sales_person_phone"
                android:background="@drawable/et_bg_selector"
                android:ems="10"
                android:hint="@string/sales_person_phone_hint"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="10"
                android:nextFocusDown="@+id/et_owner_name"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/device_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sales_person_phone"
                android:layout_marginLeft="@dimen/medium_padding"
                android:layout_toRightOf="@id/sales_person_phone_et"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/owner_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sales_person_phone_et"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/owner_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/owner_details"
                android:layout_below="@+id/owner_details"
                android:layout_marginTop="5dp"
                android:text="@string/owner_name" />

            <TextView
                android:id="@+id/owner_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/owner_name"
                android:layout_alignBottom="@+id/owner_name"
                android:layout_marginLeft="26dp"
                android:layout_toRightOf="@+id/sales_person_phone_et"
                android:text="@string/owner_phone" />

            <EditText
                android:id="@+id/et_owner_name"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/sales_person_phone_et"
                android:layout_below="@+id/owner_name"
                android:background="@drawable/et_bg_selector"
                android:ems="10"
                android:hint="@string/owner_name_hint"
                android:inputType="textPersonName"
                android:enabled="false"
                android:lines="1"
                android:nextFocusDown="@+id/et_owner_phone"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_owner_phone"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignLeft="@+id/owner_phone"
                android:layout_alignRight="@+id/et_store_zip"
                android:layout_below="@+id/owner_phone"
                android:background="@drawable/et_bgone_selector"
                android:ems="10"
                android:hint="@string/owner_phone_hint"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="10"
                android:nextFocusDown="@+id/et_owner_email"
                android:enabled="false"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/et_owner_name"
                android:layout_marginTop="10dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_owner_email"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/email"
                android:background="@drawable/et_bg_selector"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:enabled="false"
                android:nextFocusDown="@+id/store_number_edittext"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/store_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/owner_details"
                android:layout_below="@+id/et_owner_email"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/store_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/store_details"
                android:layout_marginTop="5dp"
                android:text="@string/store_name" />

            <TextView
                android:id="@+id/store_tin_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_owner_phone"
                android:layout_alignTop="@+id/store_name"
                android:text="@string/store_tin_number" />

            <EditText
                android:id="@+id/et_owner_store_name"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/store_name"
                android:background="@drawable/et_bg_selector"
                android:ems="10"
                android:hint="@string/store_name"
                android:lines="1"
                android:nextFocusDown="@+id/et_tin_number"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_tin_number"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignBaseline="@+id/et_owner_store_name"
                android:layout_alignBottom="@+id/et_owner_store_name"
                android:layout_alignLeft="@+id/store_tin_number"
                android:layout_alignRight="@+id/et_owner_phone"
                android:background="@drawable/et_bgone_selector"
                android:ems="10"
                android:hint="@string/store_tin_number"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11"
                android:nextFocusDown="@+id/et_address1"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/et_owner_store_name"
                android:layout_marginTop="10dp"
                android:text="@string/store_address1" />

            <EditText
                android:id="@+id/et_address1"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/address1"
                android:background="@drawable/et_bg_selector"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:nextFocusDown="@+id/et_store_city"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/store_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_store_city"
                android:layout_alignTop="@+id/store_zip"
                android:text="@string/store_city" />

             <EditText
                android:id="@+id/et_store_city"
                android:layout_width="350dp"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/store_zip"
                android:layout_centerHorizontal="true"
                android:hint="@string/store_city"
                android:nextFocusDown="@+id/et_store_state"
                android:background="@drawable/et_bgone_selector"
                android:singleLine="true"
                android:paddingLeft="@dimen/registration_edit_text_padding_left" />

            <EditText
                android:id="@+id/et_store_zip"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignLeft="@+id/store_zip"
                android:layout_alignParentBottom="true"
                android:background="@drawable/et_bgtwo_selector"
                android:ems="10"
                android:hint="@string/store_zip"
                android:inputType="number"
                android:lines="1"
                android:maxLength="6"
                android:paddingLeft="@dimen/registration_edit_text_padding_left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/store_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_store_state"
                android:layout_alignLeft="@+id/et_store_state"
                android:text="@string/store_state" />

            <EditText
                android:id="@+id/et_store_state"
                android:layout_width="350dp"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignParentBottom="true"
                android:hint="@string/store_state"
                android:nextFocusDown="@+id/et_store_zip"
                android:background="@drawable/et_bgone_selector"
                android:singleLine="true"
                android:paddingLeft="@dimen/registration_edit_text_padding_left" />

            <TextView
                android:id="@+id/store_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_store_zip"
                android:layout_marginLeft="58dp"
                android:layout_toRightOf="@+id/et_store_city"
                android:text="@string/store_zip" />

            <EditText
                android:id="@+id/store_number_edittext"
                android:layout_width="@dimen/registration_edit_text_width"
                android:layout_height="@dimen/registration_edit_text_height"
                android:layout_alignLeft="@+id/et_owner_phone"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/email"
                android:background="@drawable/et_bgone_selector"
                android:ems="10"
                android:hint="@string/store_landline"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:nextFocusDown="@+id/et_owner_store_name"
                android:paddingLeft="@dimen/registration_edit_text_padding_left" >
            </EditText>

            <TextView
                android:id="@+id/store_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/store_number_edittext"
                android:layout_alignLeft="@+id/store_number_edittext"
                android:text="@string/store_landline" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/create_retailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout1"
        android:layout_alignParentTop="true"
        android:text="@string/create_retailer_header"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>